# gRPCqt

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h
src/: main.cpp  mainwindow.h  proto_reflection_descriptor_database.cpp  proto_reflection_descriptor_database.h
src/proto/: reflection.proto
